# hybrid-vcs-core-

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README_SPIDER.md  RELEASE_NOTES.md  app.py  deploy_spider.py  hybrid_vcs_original.py  pyproject.toml  quick_start.py  requirements.txt  run_local.py  setup.py  show_status.py  spider_config.json  spider_entity.py  webpage_Test Page_20260122_130810.json  webpage_Test Page_20260122_130847.json  webpage_Test Page_20260122_130915.json  webpage_Test_Page_1.json  webpage_Test_Page_2.json  webpage_Test_Page_3.json
.github/: copilot-instructions.md
comet-browser-extension/: AUDIT_COMPLETION_REPORT.md  AUDIT_EXECUTIVE_SUMMARY.md  LOGICAL_COHERENCE_REPORT.md  README.md  SECURITY_AUDIT_REPORT.md  SECURITY_AUDIT_REPORT_PART2.md  TEST_PLAN.md  background.js  content.js  generate_icons.py  history.html  history.js  manifest.json  popup.html  popup.js
examples/: advanced_usage.py  basic_usage.py
hybrid_vcs/: __init__.py  cli.py  compression.py  config.py  core.py  database_manager.py  git_manager.py  web_server.py
tests/: __init__.py  test_compression.py  test_core.py
