[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "hybrid-vcs-core"
version = "1.0.0"
description = "A hybrid version control system combining centralized and distributed features"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Hybrid VCS Team", email = "team@hybridvcs.io"}
]
keywords = ["vcs", "version-control", "hybrid", "git", "web-crawler"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Version Control",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "Flask>=3.0.0",
    "Werkzeug>=3.0.1",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.2",
    "lxml>=5.1.0",
    "jinja2>=3.1.3",
    "click>=8.1.7",
    "gitpython>=3.1.40",
    "psutil>=5.9.6",
    "colorama>=0.4.6",
    "python-dotenv>=1.0.0",
    "watchdog>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/sashasmith-syber/hybrid-vcs-core-"
Repository = "https://github.com/sashasmith-syber/hybrid-vcs-core-"
Documentation = "https://github.com/sashasmith-syber/hybrid-vcs-core-/blob/main/README.md"

[project.scripts]
hybrid-vcs = "app:main"
hvcs-quick-start = "quick_start:main"
hvcs-status = "show_status:main"

[tool.setuptools]
packages = ["hybrid_vcs"]
